--- a/src/app/starter/00-preamble/page.mdx
+++ b/src/app/starter/00-preamble/page.mdx
@@ -11,9 +11,9 @@ Learning something new can be overwhelming, so the course also contains tips and
 techniques for you to get better at the skill of learning, and some inspiration
 on how to manage your life around the course.
 
-<div className="bg-green-500/50 border-green-500 border rounded-lg p-4 mb-4">
-  **While it's going to be difficult, you are here because we think you can do
-  it!**
+<div className="bg-green-500/50 border-green-500 border rounded-lg p-2 mb-4 font-medium">
+  While it's going to require hard work, you are here because we think you can do
+  it!
 </div>
 
 ## What happens after this course?
@@ -50,7 +50,7 @@ difficult work. This exercise is designed to help you remember that when you nee
 <Task title="Write down why you are here" className="my-6">
 
     Think about how your life would change if you succeeded and secured a tech job after the course.
-    Name three things that might be different.
+    **Name three things** that might be different.
 
     Don't just say:
 
@@ -60,7 +60,8 @@ difficult work. This exercise is designed to help you remember that when you nee
 
     "If I get a job after the course, I'll have the money to provide for a family."
 
-    Write it down somewhere you can look at it again. When times are tough and you’re thinking of quitting, look at what you wrote down.
+    **Write it down and send a copy to Andy**. When times are tough and you’re thinking 
+    of quitting, look at what you wrote down.
 
 </Task>
 
