--- a/src/app/starter/01-setup/page.mdx
+++ b/src/app/starter/01-setup/page.mdx
@@ -37,7 +37,7 @@ Select it with the arrow keys on your keyboard and press the Return key to
 launch to app.
 
 <Image
-  className="w-[300px] mx-auto my-6"
+  className="w-[300px] mx-auto my-12"
   src={keysImage}
   alt="arrow and return key"
 />
@@ -66,10 +66,13 @@ we sent to join our workspace.
 <Task title="Introduce Yourself On Slack">
 Remember that we said a big part of a successful interview is good writing?
 
-There is one thing above all that helps us get better at writing: **practice**.
+There is one thing above all that helps us get better at writing: practice.
 
-Your first writing assignment: introduce yourself on Slack. Tell your classmates
-your name and how many websites you've created before today.
+Your first writing assignment: introduce yourself on Slack. Tell your classmates:
+
+* your name
+* how many websites you've created before today
+* a bit about yourself, like your hobbies or your favorite movie/food/park/car/...
 
 </Task>
 
@@ -144,6 +147,7 @@ We're ready to start. Select the Explorer tab by clicking on the top icon from
 the leftmost row of icons. Click "Open Folder".
 
 ![Screenshot: create a new folder in VS code](./vscode-new-folder.png)
+<div className="my-12"></div>
 
 Select your Desktop from the left menu, and click the "New Folder" button. Name
 the new folder "Take2", then press "Open".
@@ -184,9 +188,12 @@ Your first website is ready to be viewed. Open the command palette again
 Select the entry for "Live Preview: Show Preview (External Browser)" with your
 arrow keys and press the Return key.
 
-![Screenshot: launching the live preview](./command-palette-live.png)
+<div className="mb-12">
+  ![Screenshot: launching the live preview](./command-palette-live.png)
+</div>
 
 The result should be your website, in a browser:
+
 ![Screenshot: page preview](./page-preview.png)
 
 Congratulations. While this isn't the most impressive website _yet_, we're only
